@@ -190,6 +190,12 @@ module glide_types
     !*FD \item[2] sigma coordinates are given in configuration file
     !*FD \end{description}
 
+    integer :: basal_mbal = 0
+    !*FD \begin{description}
+    !*FD \item[0] Basal melt rate not included in continuity equation
+    !*FD \item[1] Basal melt rate included in continuity equation
+    !*FD \end{description}
+
   end type glide_options
 
   !++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -298,8 +304,11 @@ module glide_types
     real(dp),dimension(:,:,:),pointer :: flwa => null() !*FD Glenn's $A$.
     real(dp),dimension(:,:),  pointer :: bwat => null() !*FD Basal water depth
     real(dp),dimension(:,:),  pointer :: stagbwat => null() !*FD Basal water depth in velo grid
+    real(dp),dimension(:,:),  pointer :: stagbtemp => null() !*FD Basal temperature on velo grid
     real(dp),dimension(:,:),  pointer :: bmlt => null() !*FD Basal melt-rate
     real(dp),dimension(:,:),  pointer :: bmlt_tavg => null() !*FD Basal melt-rate
+    real(dp),dimension(:,:),  pointer :: bpmp => null() !*FD Basal pressure melting point
+    real(dp),dimension(:,:),  pointer :: stagbpmp => null() !*FD Basal pressure melting point on velo grid
     
     integer  :: niter   = 0      !*FD
     real(sp) :: perturb = 0.0    !*FD
@@ -491,6 +500,7 @@ module glide_types
     real(dp) :: fiddle = 3.0d0    ! -
     real(dp) :: hydtim = 1000.0d0 ! yr^{-1} converted to s^{-1} and scaled, 
                                   ! 0 if no drainage = 0.0d0 * tim0 / scyr
+    real(dp) :: bwat_smooth = 0.01d0 ! basal water field smoothing strength
   end type glide_paramets
 
   !++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -630,8 +640,11 @@ contains
     call coordsystem_allocate(model%general%ice_grid, model%temper%bheatflx)
     call coordsystem_allocate(model%general%ice_grid, model%temper%bwat)
     call coordsystem_allocate(model%general%velo_grid, model%temper%stagbwat)
+    call coordsystem_allocate(model%general%velo_grid, model%temper%stagbtemp)
     call coordsystem_allocate(model%general%ice_grid, model%temper%bmlt)
+    call coordsystem_allocate(model%general%ice_grid, model%temper%bpmp)
     call coordsystem_allocate(model%general%ice_grid, model%temper%bmlt_tavg)
+    call coordsystem_allocate(model%general%velo_grid, model%temper%stagbpmp)
 
     allocate(model%lithot%temp(1:ewn,1:nsn,model%lithot%nlayer)); model%lithot%temp = 0.0
     call coordsystem_allocate(model%general%ice_grid, model%lithot%mask)
@@ -714,8 +727,11 @@ contains
     deallocate(model%temper%bheatflx)
     deallocate(model%temper%bwat)
     deallocate(model%temper%stagbwat)
+    deallocate(model%temper%stagbtemp)
     deallocate(model%temper%bmlt)
     deallocate(model%temper%bmlt_tavg)
+    deallocate(model%temper%bpmp)
+    deallocate(model%temper%stagbpmp)
 
     deallocate(model%lithot%temp)
     deallocate(model%lithot%mask)
